--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -260,6 +260,27 @@ socket.on('cpu stats', function(data) {
 					<dt>CPU Status: </dt>
 						<dd id="cpuStatus"></dd>
 				</dl>
+				<h5> Status of Processes: </h5>
+				<dl class="dl-horizontal">
+                                        <dt>audio: </dt>
+                                                <dd id="aud"></dd>
+					<dt>commrouter: </dt>
+                                                <dd id="router"></dd>
+					<dt>file-manager: </dt>
+                                                <dd id="filemanager"></dd>
+					<dt>mavproxy: </dt>
+                                                <dd id="mav"></dd>
+					<dt>nmearx: </dt>
+                                                <dd id="nmearx"></dd>
+                                        <dt>video: </dt>
+                                                <dd id="vid"></dd>
+                                        <dt>webterminal: </dt>
+                                                <dd id="webterm"></dd>
+                                        <dt>webui: </dt>
+                                                <dd id="web"></dd>
+					<dt>wldriver: </dt>
+                                                <dd id="driver"></dd>
+                                </dl>
 			</div>
 		</div>
 	</div>
