Added backend functionality for displaying status of processes.

--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -235,6 +235,18 @@ socket.on('cpu stats', function(data) {
 	document.getElementById('cpuStatus').innerHTML = data.cpu_status;
 });
 
+socket.on('getmav', function(data) {
+	document.getElementById('mav').innerHTML = data.mav;
+	document.getElementById('vid').innerHTML = data.vid;
+	document.getElementById('webterm').innerHTML = data.webterm;
+	document.getElementById('aud').innerHTML = data.aud;
+	document.getElementById('web').innerHTML = data.web;
+	document.getElementById('filemanager').innerHTML = data.filemanager;
+	document.getElementById('router').innerHTML = data.router;
+	document.getElementById('nmearx').innerHTML = data.nmearx;
+	document.getElementById('driver').innerHTML = data.driver;
+});
+
 </script>
 
 <h1>Software Status and Update</h1>
