Add companion version info to header

--- a/br-webui/_includes/header.liquid
+++ b/br-webui/_includes/header.liquid
@@ -4,6 +4,7 @@
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<script src="socket.io-file-client.js"></script> 
 	<script>
 		var socket = io();
 		
@@ -14,6 +15,11 @@
 		function shutdown() {
 			socket.emit('shutdown');
 		}
+		socket.on('companion version', function(data) {
+			document.getElementById('companion version1').innerHTML = data;
+			console.log('got version in header')
+		});
+		socket.emit('get companion version');
 	</script>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
@@ -31,6 +37,10 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#" style="color:white">ArduSub Companion Computer Setup</a>
+				<p class="text" style="color:white">
+					Companion Version:
+					<span id="companion version1"></span>
+				</p> 
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
