Added system log button at the bottom of system page.

--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -370,5 +370,23 @@ socket.on('getmav', function(data) {
 		</div>
 	</div>
 </div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">
+					Download logs from the system
+				</h3>
+			</div>
+			<div class="panel-body">
+				<a href="/webui.log" download>
+				<button type="button" class="btn btn-primary" style="height: 35px; width: 185px; display:table-cell">
+					Get System Log
+				</button>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
 
 {% include ../_includes/footer.liquid %}
