--- a/br-webui/style.css
+++ b/br-webui/style.css
@@ -36,3 +36,69 @@ body {
 .slider {
   width: 100% !important;
 }
+
+/* Specify position and size for the toggle switch */ 
+.switch {
+  position: relative;
+  top: 7px;
+  display: inline-block;
+  width: 30px;
+  height: 15px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* Specify the styling for the slider once its checked */ 
+.slidernew {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+/* Specify the styling for the slider when its not checked. */
+.slidernew:before {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  left: 3px;
+  bottom: 2.5px;
+  top: 2.4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+/* Specify how the slider will look once its checked */
+input:checked + .slidernew {
+  background-color: #2196F3;
+}
+
+/* Specify how the slider will transform and move when its checked. */
+input:checked + .slidernew:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(14px);
+}
+
+/* Specify Rounded slider radius */
+.slidernew.round {
+  border-radius: 34px;
+}
+
+/* Specify Rounded sliders before its checked*/
+.slidernew.round:before {
+  border-radius: 50%;
+}
+
+/* Specify the toggle switch color */
+.toggle {
+  color: white;
+}
