system: reword system log download

--- a/br-webui/views/system.liquid
+++ b/br-webui/views/system.liquid
@@ -383,13 +383,13 @@ socket.on('getmav', function(data) {
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="panel-title">
-					Download logs from the system
+					System Log
 				</h3>
 			</div>
 			<div class="panel-body">
 				<a href="/webui.log" download>
 				<button type="button" class="btn btn-primary" style="height: 35px; width: 185px; display:table-cell">
-					Get System Log
+					Download System Log
 				</button>
 				</a>
 			</div>
